# AIThon_TeamC_jounalling

./: .gitignore  BUILD_SUMMARY.md  CLAUDE.md  CURRENT_PROGRESS.md  DEMO_SCRIPT.md  DEMO_SETUP.md  FINAL_COMMIT_STATUS.md  IMPLEMENTATION_SUMMARY.md  POETRY_INSTALLATION.md  QUICK_REFERENCE.md  README.md  SEARCH_QUICKSTART.md  SEMANTIC_SEARCH.md  SESSION_SUMMARY.md  SETUP_COMPLETED.md  START_DEMO_HERE.md  START_HERE.md  TASK_DISPLAY_FIX.md  setup.sh
.claude/: settings.local.json
additional_docs/: ADMIN_SETUP.md  AI_SUGGESTIONS_COMPLETE.md  API_URL_FIX.md  AUDIO_UPLOAD_FEATURE.md  BACKEND_SETUP.md  COMPLETION_SUMMARY.md  COMPONENT_CHANGES.md  DOCUMENTATION_INDEX.md  FEATURES_IMPLEMENTED.md  FINAL_FIXES_SUMMARY.md  FINAL_STATUS.md  FIXES_SUMMARY.md  (+41 more)
backend/: .env.example  alembic.ini  pyproject.toml  run_migrations.py  test_insight_agent.py  test_intake_agent.py  test_memory_agent.py  test_openai_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_update_embedding_to_vector.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  insight.py  intake.py  memory.py  prompts.py
backend/app/models/: __init__.py  base.py  entity.py  journal.py  task.py  user.py
backend/app/routers/: __init__.py  entries.py  insights.py  journal.py  search.py  tasks.py  transcription.py  user.py
backend/app/schemas/: __init__.py  journal.py  task.py  user.py
backend/app/services/: __init__.py  database.py  embeddings.py  journal.py  task.py  transcription.py  user.py
backend/tests/: test_agents.py
(+22 files in other folders)
